[project]
name = "myspendsheet"
version = "0.1.0"
description = ""
authors = [
    {name = "Travis Dang"}
]
requires-python = ">=3.9,<4"
dependencies = [
    "django (>=4.2,<5.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "django-extensions (>=3.2.3,<4.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "django-filter (>=25.1,<26.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "pymupdf (>=1.25.5,<2.0.0)",
    "openai (>=1.70.0,<2.0.0)"
]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"
pytest = "^8.3.5"
pytest-django = "^4.11.1"
pre-commit = "^4.2.0"

